tests/baselines/reference/recursiveInheritance3.errors.txt
recursiveInheritance3.ts(1,7): error TS2420: Class 'C' incorrectly implements interface 'I'.
  Property 'other' is missing in type 'C' but required in type 'I'.


==== recursiveInheritance3.ts (1 errors) ====
    class C implements I {
          ~
!!! error TS2420: Class 'C' incorrectly implements interface 'I'.
!!! error TS2420:   Property 'other' is missing in type 'C' but required in type 'I'.
!!! related TS2728 recursiveInheritance3.ts:7:5: 'other' is declared here.
        public foo(x: any) { return x; }
        private x = 1;
    }
    
    interface I extends C {
        other(x: any): any;
    }